@@ -4,7 +4,7 @@ AUX freenet.old 643 RMD160 be7dc68fed6caf7062f9b3250be6223513d375ff SHA1 50f7069
 AUX wrapper1.conf 1846 RMD160 b75534061632064f7ebd9153260b021a7f23c076 SHA1 b6df84ded6f31b1a2c0757cdf7c8736e9b744181 SHA256 00b09246fd598c6ce13836d79104e4964de538ac1d9b3af6fa7bf240f142ca00
 DIST freenet-0.7_p1163.tar.bz2 2263374 RMD160 7dab1b3d34d9bd1dce7394e4afcf517994458438 SHA1 b5860802f1f02c81e984eefc596c62a2c9f6afc7 SHA256 5a20c69aefbb16381b85161f2479cb360fc77d713c4502442c46681374983964
 DIST seednodes-20080914.fref 22382 RMD160 acbf450884ea767e9593d9f7053595d66c9bc0a4 SHA1 347b2ed8d6c792525fd4668fa500a05a2526091f SHA256 7f252080f70182692c7b32a13d5cd480c7d5ed0918ec671bea1d7b3b649cd73a
-EBUILD freenet-0.7_p1163.ebuild 3145 RMD160 54f4ba26d0f47e906b6f277cdc144742d3d21625 SHA1 dec5d4cecf060a071d8cebe7533e5c4dea41d238 SHA256 fa9129fc6ff9772c3855b2f1bbc7f96f2003cd01caf9cab4949024ee08cbba87
-EBUILD freenet-9999-r1.ebuild 3850 RMD160 686ca26a34159a1bdaea50e4d5ed14180b4f8df0 SHA1 4d4ae6c76c372b7888a88304b79c0c3eb7a3cdf1 SHA256 16ea55f8e671ddf169edc138a5c31b97ef3a0b0e3fff116334ee37217be24493
-MISC ChangeLog 13202 RMD160 e4e40dd30016b64cd580c270a0bfb7921a23774e SHA1 d14f0c78287de0fafc74237f6a1d0d5b49d13a55 SHA256 bc155c15d2c832d9c9fbcd02141cbc1dd58fc47f62db0a6a7657e148fc6d9059
+EBUILD freenet-0.7_p1163.ebuild 3315 RMD160 49ee1d56f2781f055dd3a795ba36fafd7090a872 SHA1 68f1b88aaa9cee1a1a3f13df725d8881613a7622 SHA256 dbe792c3ef2e17cd8bd4fb6602e7bfd617016f7fe2c6c8be2053920a7497ce2b
+EBUILD freenet-9999-r1.ebuild 4020 RMD160 cb6d00af560c69328adf67601b3185495cfd9d3d SHA1 cd93c0963baa774d9f2a8aaa51607d538e1d9274 SHA256 489442fdde0fc7c79ce48bbbf7e933c26761dd7ae25c0ea906637eb9e89008c1
+MISC ChangeLog 13360 RMD160 795a97836f75838befd5ad4a5d6f6cf7a56d72bf SHA1 d557d3543227a7b3161167eb771f7cc83212933b SHA256 6ed1e96b753492eeb226c54d6c6214e75c21c0cd2feb23205ba56f55e13a5000
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
